# mpc-core

./: Cargo.toml  LICENSE-MIT  README.md
src/: lib.rs
src/example/: additive.rs  mod.rs
src/mpc/: circuit.rs  config.rs  execution.rs  mod.rs  scheme.rs
src/networking/: mod.rs  network.rs
src/networking/secure_mesh/: identity.rs  mesh_network.rs  mod.rs  secure_stream.rs
