[package]
name = "mpc-core"
version = "0.1.0"
edition = "2024"
description = "A flexible, trait-based core framework and asynchronous execution engine for Multi-Party Computation (MPC) protocols."
license = "MIT"

[dependencies]
serde = { version = "1.0.228", features = ["serde_derive"] }
postcard = { version = "1.1.3", features = ["use-std"] }
sha3 = "0.10.8"
generic-array = { version = "=0.14.7", features = ["serde"] }
snafu = "0.9.0"
itertools = "0.14.0"

ed25519-dalek = { version = "2.2.0", features = ["rand_core"], optional = true }
rand = { version = "0.8", optional = true }
base64 = { version = "0.22.1", optional = true }
tokio = { version = "1.43.0", features = [
    "net",
    "io-util",
    "time",
    "macros",
    "rt-multi-thread",
], optional = true }
chacha20poly1305 = { version = "0.10.1", optional = true }
x25519-dalek = { version = "2.0.1", optional = true }
anyhow = { version = "1.0.95", optional = true }
futures = { version = "0.3.31", optional = true }

[features]
example-additive = ["dep:rand"]
example-secure-network = [
    "dep:ed25519-dalek",
    "dep:rand",
    "dep:base64",
    "dep:tokio",
    "dep:chacha20poly1305",
    "dep:x25519-dalek",
    "dep:anyhow",
    "dep:futures",
]
